project(sc6)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
add_executable(server server.c sem.c alloc.c uri.c socket.c string.c thread_client_tcp.c time.c block.c stats.c socket_tcp.c socket_udp.c thread_garbage.c data_structure.c data_garbage.c thread_client_udp.c socket_udp_structure.c equeue.c socket_garbage.c interval.c udp_request.c rps.c list.c data.c basic.c base64.c argument.c thread.c math.c exit_code.c sha1.c websocket.c geoip.c)
add_executable(client client.c)
add_executable(kqueue origin-kqueue/kqueue.c)
add_executable(epoll origin-epoll/epoll.c)
add_executable(test test.c alloc.c block.c list.c sem.c base64.c sha1.c string.c exit_code.c geoip.c)
add_executable(ipv6 origin-ipv6/_ipv6.c)
